# morty-code

./: .gitignore  README.md  pyproject.toml
docs/: agent.txt  claude-attachments-deep-dive.md  claude-cache-deep-dive.md  claude-code-architecture-review-deep-dive.md  claude-compact-deep-dive.md  claude-failure-handling-deep-dive.md  claude-forked-agent-deep-dive.md  claude-harness-deep-dive.md  claude-memory-rules-for-morty.md  claude-message-normalizer-deep-dive-2.md  claude-plan-mode-deep-dive.md  claude-security-deep-dive.md  claude-skill-flow-analysis.md  claude-subagent-deep-dive.md  claude-tools-deep-dive.md  context.js  morty-code-current-state-and-gap-analysis.md  skill.txt
tests/: test_attachment_manager.py  test_builtin_tools.py  test_cli_plan_approval.py  test_cli_workspace_paths.py  test_clipboard_image.py  test_clipboard_text.py  test_compact_agent.py  test_compact_boundary.py  test_decision_gate.py  test_durable_memory.py  test_harness_stream_json.py  test_mcp_support.py  test_memory_extractor.py  test_model_client.py  test_model_memory_extractor.py  test_multimodal_input.py  test_os_sandbox.py  test_permission_interaction.py  test_plan_mode.py  test_prompt_tool_guidance.py  test_query_engine_memory.py  test_query_engine_tool_scope.py  test_query_loop_tool_events.py  test_relevant_memory.py  test_repl_ui.py  test_security_permissions.py  test_send_message_tool.py  test_session_memory.py  test_session_restore_tool_results.py  test_skill_flow.py  test_stream_json_multimodal.py  test_subagent_notifications.py  test_subagent_output.py  (+2 more)
(+87 files in other folders)
