[project]
name = "morty-code"
version = "0.1.0"
description = "A Python long-session agent runtime prototype inspired by Claude Code"
readme = "README.md"
authors = [
    { name = "yanglu", email = "lu.yang01@transwarp.io" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
morty-code = "morty_code:main"

[build-system]
requires = ["uv_build>=0.11.1,<0.12.0"]
build-backend = "uv_build"
